AW + NE | 256 | Fixed non-wrapping button sign in

--- a/assets/stylesheets/components/_sign_in.scss
+++ b/assets/stylesheets/components/_sign_in.scss
@@ -18,33 +18,6 @@
   margin-left: auto;
   margin-right: auto;
   padding-left: 48px;
+  white-space: normal;
+  line-height: inherit;
 }
-//.button--sign-in {
-//  font-weight: normal;
-//  vertical-align: middle;
-//  cursor: pointer;
-//  -moz-user-select: none;
-//  background-image: none;
-//  border: 1px solid rgba(0, 0, 0, 0.2);
-//  display: block;
-//  width: 100%;
-//  position: relative;
-//  text-align: left;
-//  white-space: nowrap;
-//  overflow: hidden;
-//  text-overflow: ellipsis;
-//  color: #000;
-//  background-color: #FFF;
-//  padding: 10px 16px 10px 42px;
-//  @include font-size(16px);
-//  line-height: 1.33;
-//  border-radius: 6px;
-//  max-width: 12.5em;
-//  margin: 2em auto;
-//  text-decoration: none;
-//
-//
-//  &:hover {
-//    background-color: #E6E6E6;
-//  }
-//}
